After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741727 - Wrong resizable filelist dialog
Wrong resizable filelist dialog
Status: RESOLVED FIXED
Product: gnome-packagekit
Classification: Core
Component: general
git master
Other Linux
: Normal minor
: ---
Assigned To: gnome-packagekit-maint
gnome-packagekit-maint
Depends on:
Blocks:
 
 
Reported: 2014-12-18 17:52 UTC by Marek Černocký
Modified: 2015-10-25 01:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot (127.78 KB, image/jpeg)
2014-12-19 18:56 UTC, Marek Černocký
  Details
0001-Fixed-resizing-of-Files-window (760 bytes, patch)
2015-10-18 08:53 UTC, Ignazio Sgalmuzzo
committed Details | Review
0002-Added-resizing-to-Dependent-Packages-and-Required-Packages-windows (1.36 KB, patch)
2015-10-18 08:55 UTC, Ignazio Sgalmuzzo
committed Details | Review

Description Marek Černocký 2014-12-18 17:52:20 UTC
Dialog with filelist in gpk-application has bad behavior on resize. See attachment.
Comment 1 Michael Catanzaro 2014-12-19 15:00:35 UTC
The attachment didn't make it, can you try again to post it? Thanks!
Comment 2 Marek Černocký 2014-12-19 18:56:09 UTC
Created attachment 293069 [details]
Screenshot
Comment 3 Ignazio Sgalmuzzo 2015-10-14 20:58:24 UTC
Hello, I'm trying to fix this, but I don't know if "Files" list should be resizeable: "Required Packages" and "Dependent Packages" lists are not.

I'm not sure if I should:

1) permit correct resize of "Files" list and permit resize in "Required Packages" and "Dependent Packages" too

2) only block resizing on "Files" list.

Thanks.
Comment 4 Ignazio Sgalmuzzo 2015-10-18 08:53:02 UTC
Created attachment 313604 [details] [review]
0001-Fixed-resizing-of-Files-window
Comment 5 Ignazio Sgalmuzzo 2015-10-18 08:55:46 UTC
Created attachment 313605 [details] [review]
0002-Added-resizing-to-Dependent-Packages-and-Required-Packages-windows

0001-Fixed-resizing-of-Files-window 
  this fixes the original problem

0002-Added-resizing-to-Dependent-Packages-and-Required-Packages-windows
  maybe this should be resizeable too

Thanks.
Comment 6 Michael Catanzaro 2015-10-25 01:55:50 UTC
Thanks for your patches. I didn't test these, but they seem harmless, so I will commit them. Please do note that nobody is maintaining gnome-packagekit anymore; it's been obsoleted by gnome-software.