Fixed resizing of "Files" window

https://bugzilla.gnome.org/show_bug.cgi?id=741727